2009-01-24  Claude Paroz  <claude@2xlibre.net>

	* README: Add instructions for jQuery installation.
	* media/css/main.css: Add styles for sortable tables.
	* media/img/(bg|asc|desc).gif: Icons (arrows) for sortable headers.
	* templates/people/person_detail.html: Make the 'Working on' table
	sortable.
	Fixes bug #567676.

2009-01-23  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Make get_vcs_web_url work for git/hg repo types.
	* templates/module_detail.html: Make 'Browse' link more generic.

2009-01-23  Claude Paroz  <claude@2xlibre.net>

	* stats/utils.py: When environment variable(s) are passed for Popen,
	merge them with	current environment instead of replacing it.

2009-01-22  Claude Paroz  <claude@2xlibre.net>

	* teams/forms.py: Person name (form label) linked to person page.
	* templates/teams/team_detail.html: Form label contains HTML (URL).
	Fixes bug #567367.

2009-01-20  Claude Paroz  <claude@2xlibre.net>

	* vertimus/models.py: Rephrase some action names and add translator
	comments.
	Fixes bug #567345.

2009-01-20  Claude Paroz  <claude@2xlibre.net>

	* vertimus/models.py: If pot file does not exist, do not merge. Make
	vertimus tests pass again.
	* vertimus/views.py: Provide for the case where there isn't a merged
	file.

2009-01-20  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py:
	* vertimus/tests/__init__.py: Add 'Inform of submission' for all
	committers (and coordinators). Fixes bug #567394 but some cases
	aren't perfect so we intend to provide a better version later.

2009-01-20  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py: Replace ActionBackup.created by a DateTime.
	Under the awful MySQL:
	ALTER TABLE `action_backup` CHANGE `created` `created` datetime NOT NULL

2009-01-20  Claude Paroz  <claude@2xlibre.net>

	* templates/languages/language_release_stats.html: Strip HTML tags from
	error description.
	Fixes bug #568159.

2009-01-20  Claude Paroz  <claude@2xlibre.net>
