@@ -1,3 +1,8 @@
+2009-01-24  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* vertimus/models.py: Fixes bug #568777
+	* vertimus/tests/__init__.py: Added unit tests for this bug.
+
 2009-01-24  Claude Paroz  <claude@2xlibre.net>
 
 	* README: Add instructions for jQuery installation.
